--- a/_config.yml
+++ b/_config.yml
@@ -26,15 +26,15 @@ author:
   pronouns         : "he/him"  
   bio              : "Graduate Data Science Student"
   location         : "Ann Arbor, MI"
-  employer         : "University of Michigan / The MITRE Corporation"
-  uri              : # URL
+  employer         : "University of Michigan"
+  emoloyer         : The MITRE Corporation
   email            : "sai.avula13@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "#http://orcid.org/yourorcidurl"
+  orcid            : #"#http://orcid.org/yourorcidurl"
   semantic         : # URL
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
