--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Portfolio"
+  - title: "Projects"
     url: /portfolio/
 
   #- title: "Projects"
