--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   #- title: "Teaching"
   #  url: /teaching/    
 
-  - title: "Blog"
+  - title: "Writing"
     url: /interests/
 
         
