--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,9 @@ main:
   - title: "CV"
     url: /resume/
 
+    - title: "Research"
+    url: /research/
+
   - title: "Projects"
     url: /portfolio/
 
