--- a/_config.yml
+++ b/_config.yml
@@ -224,7 +224,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-
+  research:
+    output: true
+    permalink: /:collection/:path/
 
 # These settings control how pages and collections are included in the site
 defaults:
@@ -281,6 +283,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _research
+  - scope:
+      path: ""
+      type: research
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 
 # Sass/SCSS
